# PawTrack

./: .gitignore  AGENTS.md  CMakeLists.txt  PawTrack_Technical_Notes.md  README.md  prj.conf
boards/: seeed_xiao_mg24.json
include/pawtrack/: ble.h  imu.h  power.h
scripts/: build.sh  flash.sh  monitor.sh  westw
src/: main.c
src/modules/ble/: CMakeLists.txt  ble.c
src/modules/imu/: CMakeLists.txt  imu.c
src/modules/power/: CMakeLists.txt  power.c
